// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build command (html entry) > allows entry name overrides via data-entry-name attribute 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="preload" as="fetch" crossorigin="anonymous" type="application/json" href="/abs-manifest.json">
    <link rel="preload" as="fetch" crossorigin="anonymous" type="application/json" href="manifest.json">
    <link rel="apple-touch-icon" href="favicon.png?v=1.2.3">
    <script defer="" type="module" src="my-entry-1.2.3.js"></script>
    <script>
      window.__app_version__ = '1.2.3';
    </script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
---------------------------------
manifest.json
---------------------------------
Man, I fest
---------------------------------
my-entry-1.2.3.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
`;

exports[`build command (html entry) > builds a simple HTML entry point 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > includes CSS entries and referenced CSS from JS with content hashes and path segments 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
css/entry-6DB2HAOI.css
---------------------------------
/* src/route.css */
.route {
  background: blue;
}

/* src/app.css */
.app {
  background: green;
}

/* src/entry.css */
body {
  background: red;
}
---------------------------------
css/style-NCKSKVOY.css
---------------------------------
/* src/style.css */
body {
  background: yellow;
}
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="stylesheet" href="css/style-NCKSKVOY.css">
    <link href="entry-6DB2HAOI.css" rel="stylesheet">
    <script defer="" type="module" src="js/entry-QFZL2TWK.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
---------------------------------
js/entry-QFZL2TWK.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
var Route = import("../route-QVSA3B7Z.js").then(({
  default: Route2
}) => Route2);

function App() {
  return /* @__PURE__ */ React.createElement(Suspense, null, /* @__PURE__ */ React.createElement(Route, null, "Hello world"));
}

// src/entry.tsx
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
route-FIDLIZGC.css
---------------------------------
/* src/route.css */
.route {
  background: blue;
}
---------------------------------
route-QVSA3B7Z.js
---------------------------------
// src/route.tsx
function Route() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
export {
  Route as
  default
};
`;

exports[`build command (html entry) > includes referenced CSS from HTML 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.0.css
---------------------------------
/* styles/app.css */
.app {
  background: green;
}

/* styles/entry.css */
body {
  background: red;
}
---------------------------------
entry.1.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="stylesheet" href="entry.0.css">
    <script defer="" type="module" src="entry.1.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > includes referenced CSS from JS 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.css
---------------------------------
/* src/app.css */
.app {
  background: green;
}

/* src/entry.css */
body {
  background: red;
}
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}

// src/entry.tsx
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry.js"></script>
    <link href="entry.css" rel="stylesheet">
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > includes referenced CSS from JS with content hashes 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry-ANTTFN3R.css
---------------------------------
/* src/route.css */
.route {
  background: blue;
}

/* src/app.css */
.app {
  background: green;
}

/* src/entry.css */
body {
  background: red;
}
---------------------------------
entry-EKKSV2ZN.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
var Route = import("./route-QVSA3B7Z.js").then(({
  default: Route2
}) => Route2);

function App() {
  return /* @__PURE__ */ React.createElement(Suspense, null, /* @__PURE__ */ React.createElement(Route, null, "Hello world"));
}

// src/entry.tsx
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry-EKKSV2ZN.js"></script>
    <link href="entry-ANTTFN3R.css" rel="stylesheet">
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
---------------------------------
route-FIDLIZGC.css
---------------------------------
/* src/route.css */
.route {
  background: blue;
}
---------------------------------
route-QVSA3B7Z.js
---------------------------------
// src/route.tsx
function Route() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
export {
  Route as
  default
};
`;

exports[`build command (html entry) > includes referenced assets from HTML 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="apple-touch-icon" href="favicon.png">
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > includes referenced assets from HTML using their esbuild-generated output paths 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// assets/icon.svg
var icon_default = "./icon-IPILGNO5.svg";

// src/entry.tsx
function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world ", /* @__PURE__ */ React.createElement("img", {
    src: icon_default
  }));
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
icon-IPILGNO5.svg
---------------------------------
<svg></svg>
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="apple-touch-icon" href="icon-IPILGNO5.svg">
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > includes referenced assets from style tags 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
cats.jpg
---------------------------------
MEOW
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <style>
      body {
        background: url(cats.jpg);
      }
    </style>
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > includes referenced compile-to-CSS from JS with content hashes 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry-OSY7SPHL.css
---------------------------------
/* sass:./route.css */
.route {
  background: blue;
}

/* sass:./app.css */
.app {
  background: green;
}

/* sass:./entry.css */
body {
  background: red;
}
---------------------------------
entry-S6VY6RBV.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
var Route = import("./route-5DIYUT2I.js").then(({
  default: Route2
}) => Route2);

function App() {
  return /* @__PURE__ */ React.createElement(Suspense, null, /* @__PURE__ */ React.createElement(Route, null, "Hello world"));
}

// src/entry.tsx
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry-S6VY6RBV.js"></script>
    <link href="entry-OSY7SPHL.css" rel="stylesheet">
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
---------------------------------
route-5DIYUT2I.js
---------------------------------
// src/route.tsx
function Route() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
export {
  Route as
  default
};
---------------------------------
route-SG2FYVD5.css
---------------------------------
/* sass:./route.css */
.route {
  background: blue;
}
`;

exports[`build command (html entry) > substitutes defined values in output HTML 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="preload" as="fetch" crossorigin="anonymous" type="application/json" href="/abs-manifest.json">
    <link rel="preload" as="fetch" crossorigin="anonymous" type="application/json" href="manifest.json">
    <link rel="apple-touch-icon" href="favicon.png?v=1.2.3">
    <script defer="" type="module" src="entry.js"></script>
    <script>
      window.__app_version__ = '1.2.3';
    </script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
---------------------------------
manifest.json
---------------------------------
Man, I fest
`;

exports[`build command (html entry) > substitutes defined values in output HTML with publicPath 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <link rel="preload" as="fetch" crossorigin="anonymous" type="application/json" href="/abs-manifest.json">
    <link rel="preload" as="fetch" crossorigin="anonymous" type="application/json" href="/public/manifest.json">
    <link rel="apple-touch-icon" href="/public/favicon.png?v=1.2.3">
    <script defer="" type="module" src="/public/entry.js"></script>
    <script>
      window.__app_version__ = '1.2.3';
    </script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
---------------------------------
manifest.json
---------------------------------
Man, I fest
`;

exports[`build command (html entry) > supports automatic react runtime 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
entry.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

// src/app.tsx
import {
  jsx
} from "react/jsx-runtime";

function App() {
  return /* @__PURE__ */ jsx("div", {
    children: "Hello world"
  });
}

// src/entry.tsx
import {
  jsx as jsx2
} from "react/jsx-runtime";
ReactDOM.render( /* @__PURE__ */ jsx2(App, {}), document.getElementById("root"));
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <script defer="" type="module" src="entry.js"></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;

exports[`build command (html entry) > writes integrity hashes if requested 1`] = `
---------------------------------
STDOUT
---------------------------------
✔  Finished index.html with 0 error(s) and 0 warning(s) in XX time
---------------------------------
cats.jpg
---------------------------------
MEOW
---------------------------------
entry.0.css
---------------------------------
/* styles/entry.css */
body {
  background: red;
}
---------------------------------
entry.1.js
---------------------------------
// src/entry.tsx
import ReactDOM from "react-dom";

function App() {
  return /* @__PURE__ */ React.createElement("div", null, "Hello world");
}
ReactDOM.render( /* @__PURE__ */ React.createElement(App, null), document.getElementById("root"));
---------------------------------
favicon.png
---------------------------------
IMA FAVICON
---------------------------------
index.html
---------------------------------
<!DOCTYPE html>
<html>
  <head>
    <style>
      body {
        background: url(cats.jpg);
      }
    </style>
    <link rel="apple-touch-icon" href="favicon.png" integrity="sha256-m/XpYP27F4yCq5KBTKxEzP5x4gZBZjo5zeuDXbm+ypw=">
    <link rel="stylesheet" href="entry.0.css" integrity="sha256-h7N0aRQFgi82y9VoYyAN3AlXuyhJ58bQ1uWjjffOWm4=">
    <script defer="" type="module" src="entry.1.js" integrity="sha256-NvQobgjBDGRnA/TwQI2waRjuU25hnAjteV1NhFBmjbo="></script>
  </head>
  <body>
    <div id="root"></div>
  </body>
</html>
`;
